--- a/assets/scss/layouts.scss
+++ b/assets/scss/layouts.scss
@@ -20,8 +20,11 @@ body {
 
 .container {
     width: 1600px;
-    @media (max-width: 1600px) {
-        width: 1280px;
+    @media (max-width: 1680px) {
+        width: 1200px;
+    }
+    @media (max-width: 1340px) {
+        width: 1080px;
     }
 }
 
