--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -7,15 +7,18 @@ h1 {
     font-size: 160px;
     font-weight: 300;
     letter-spacing: 8px;
-    @media (max-width: 1600px) {
+    @media (max-width: 1680px) {
         font-size: 120px;
+    }
+    @media (max-width: 1340px) {
+        font-size: 100px;
     }
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 24px;
     font-weight: 500;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
 }
 
 h3 {
