--- a/assets/scss/layouts.scss
+++ b/assets/scss/layouts.scss
@@ -26,6 +26,9 @@ body {
     @media (max-width: 1340px) {
         width: 1080px;
     }
+    @media (max-width: 550px) {
+        width: 90%;
+    }
 }
 
 .flex {
